@startuml SubclassesEnclosure
abstract class Enclosure {
    ----
    -String enclosureType
    -int length
    -int width
    -int animalsInside = 0
    -List<Animal> animals
    ----
    +Enclosure(String, int, int)
    +String getEnclosureType()
    +List<Animal> getAnimals()
    +int getLength()
    +int getWidth()
    +int calculateCapacity()
    +void addAnimal(Animal)
    +void ageAnimals()
    +void feedAnimals()
    +double worthOfEnclosure()
    +void print()
    +void removeDeadAnimals()
}

class LandEnclosure {
    ----
    #boolean planting
    ----
    +LandEnclosure(String, int, int, boolean)
    +int calculateCapacity()
}

class AirEnclosure {
    ----
    #int height
    ----
    +AirEnclosure(String, int, int, int)
    +int calculateCapacity()
}

class WaterEnclosure {
    ----
    #int waterCapacity
    ----
    +WaterEnclosure(String, int, int, int)
    +int calculateCapacity()
}

Enclosure <|-- LandEnclosure
Enclosure <|-- AirEnclosure
Enclosure <|-- WaterEnclosure
@enduml
